# whale-alert-rec

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  docker-compose.yml  generate_api_key.py  generate_tg_session.py  generate_tg_session.sh  manage_api_keys.py  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  __main__.py  app.py  auth.py  config.py  database.py  routes.py
whale_alert/: __init__.py  __main__.py  app.py  config.py  schemas.py
whale_alert/db/: crud.py  models.py  session.py
whale_alert/llm/: __init__.py  parser.py
whale_alert/telegram/: client.py
